--- a/Final_proj_text.qmd
+++ b/Final_proj_text.qmd
@@ -83,7 +83,20 @@ To help us answer our research questions, we integrated the data from the primar
 
 ### FAIR AND CARE Principles:
 
-***get from Shania***
+The datasets used in this report adhere to the FAIR principles, highlighting the availability of the data:
+
+**F- FINDABLE:**
+- Both the primary and secondary datasets can be found on Kaggle, which is a platform where people can find and publish datasets in a clear location
+**A- ACCESSIBLE:**
+- Both datasets are accessible through Kaggle, allowing anyone to download and use the data at their leisure.
+**I- INTEROPERABLE:**
+- Both datasets are in the form of .csv files, making the data compatible with many tools and platforms like R-Studio. 
+**R- REUSABLE:**
+- Both datasets include metadata and documentation that supports this
+- Through our data wrangling process, we changed the column name referring to family/social to social support. We also accounted for any data not measured as null. By doing so, we cleaned up the structure making it easier for future use
+
+Considering that neither dataset includes any sensitive or personal data, we still highlighted ethical practices throughout our project. Both datasets are publicly available and our analysis and primary questions asked do not hurt any individuals.  
+
 
 ### Exploratory Data Analysis (EDA)
 
